{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 176,
  "lineage": "15ee9d30-6598-e481-9aab-cc2b5ef3fb31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0130820f8159866f1",
            "public_dns": "ec2-15-206-38-4.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.38.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DevOps-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-AppServer1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ae4f0fa498eede9",
            "arn": "arn:aws:ec2:ap-south-1:457614808592:instance/i-00d0fbee854fc48e2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d0fbee854fc48e2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AwsLinuxKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06507d8856569fee0",
            "private_dns": "ip-10-0-3-114.ap-south-1.compute.internal",
            "private_ip": "10.0.3.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d49c9e99edc71295",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0ae635c2c5bbf3c",
            "tags": {
              "Name": "DevOps-AppServer1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b5e2516d9451621"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.private-a",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-AppServer2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ae4f0fa498eede9",
            "arn": "arn:aws:ec2:ap-south-1:457614808592:instance/i-0f3272e2f945ec1c0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3272e2f945ec1c0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AwsLinuxKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc9ab37d0dcee47c",
            "private_dns": "ip-10-0-4-144.ap-south-1.compute.internal",
            "private_ip": "10.0.4.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0733791bd04d34f31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d032b6fe9fe6e1dd",
            "tags": {
              "Name": "DevOps_AppServer2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b5e2516d9451621"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.private-b",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-WebServer1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ae4f0fa498eede9",
            "arn": "arn:aws:ec2:ap-south-1:457614808592:instance/i-0816cc5f9502a803b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0816cc5f9502a803b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AwsLinuxKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a0be052748cfe2f2",
            "private_dns": "ip-10-0-1-180.ap-south-1.compute.internal",
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-52-66-206-41.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.206.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04153eb6aba3f7344",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070423676f317930b",
            "tags": {
              "Name": "DevOps-WebServer1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b5e2516d9451621"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.public-a",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-WebServer2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ae4f0fa498eede9",
            "arn": "arn:aws:ec2:ap-south-1:457614808592:instance/i-032bad2dbc062d0b0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032bad2dbc062d0b0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AwsLinuxKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-001b7b12fdd92ee74",
            "private_dns": "ip-10-0-2-77.ap-south-1.compute.internal",
            "private_ip": "10.0.2.77",
            "public_dns": "ec2-13-127-15-183.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.15.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e55fc01896d27b46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd2615076c014b01",
            "tags": {
              "Name": "DevOps-WebServer2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b5e2516d9451621"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.public-b",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DevOps-IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e9ef3af083f7831c",
            "owner_id": "457614808592",
            "tags": {
              "Name": "DevOps-IGW"
            },
            "vpc_id": "vpc-053e0d138b1c5e6ae"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DevOps-NatGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0130820f8159866f1",
            "id": "nat-00e1bd370585b3921",
            "network_interface_id": "eni-0f0b7f0ab14e5ffda",
            "private_ip": "10.0.1.133",
            "public_ip": "15.206.38.4",
            "subnet_id": "subnet-070423676f317930b",
            "tags": {
              "Name": "DevOps-NatGW"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.DevOps-IGW",
            "aws_subnet.public-a",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DevOps-Private-RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c5e0ab986373d7b9",
            "owner_id": "457614808592",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-00e1bd370585b3921",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-Private-RT"
            },
            "vpc_id": "vpc-053e0d138b1c5e6ae"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.DevOps-IGW",
            "aws_nat_gateway.DevOps-NatGW",
            "aws_subnet.public-a",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DevOps-Public-RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c91091135cce4392",
            "owner_id": "457614808592",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9ef3af083f7831c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-Public-RT"
            },
            "vpc_id": "vpc-053e0d138b1c5e6ae"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deb959936f8bec28",
            "route_table_id": "rtb-0c5e0ab986373d7b9",
            "subnet_id": "subnet-0c0ae635c2c5bbf3c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.DevOps-IGW",
            "aws_nat_gateway.DevOps-NatGW",
            "aws_route_table.DevOps-Private-RT",
            "aws_subnet.private-a",
            "aws_subnet.public-a",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066f88c58e820a9dc",
            "route_table_id": "rtb-0c5e0ab986373d7b9",
            "subnet_id": "subnet-0d032b6fe9fe6e1dd"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.DevOps-IGW",
            "aws_nat_gateway.DevOps-NatGW",
            "aws_route_table.DevOps-Private-RT",
            "aws_subnet.private-b",
            "aws_subnet.public-a",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0194392b0abf5ac37",
            "route_table_id": "rtb-0c91091135cce4392",
            "subnet_id": "subnet-070423676f317930b"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_route_table.DevOps-Public-RT",
            "aws_subnet.public-a",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b224433e47e5d680",
            "route_table_id": "rtb-0c91091135cce4392",
            "subnet_id": "subnet-0fd2615076c014b01"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_route_table.DevOps-Public-RT",
            "aws_subnet.public-b",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DevOps-EC2-SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:457614808592:security-group/sg-09b5e2516d9451621",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b5e2516d9451621",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DevOps-EC2-SG",
            "name_prefix": null,
            "owner_id": "457614808592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-053e0d138b1c5e6ae"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:457614808592:subnet/subnet-0c0ae635c2c5bbf3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c0ae635c2c5bbf3c",
            "map_public_ip_on_launch": false,
            "owner_id": "457614808592",
            "tags": {
              "Name": "Private-Subnet-a"
            },
            "vpc_id": "vpc-053e0d138b1c5e6ae"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:457614808592:subnet/subnet-0d032b6fe9fe6e1dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d032b6fe9fe6e1dd",
            "map_public_ip_on_launch": false,
            "owner_id": "457614808592",
            "tags": {
              "Name": "Private-Subnet-b"
            },
            "vpc_id": "vpc-053e0d138b1c5e6ae"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:457614808592:subnet/subnet-070423676f317930b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-070423676f317930b",
            "map_public_ip_on_launch": true,
            "owner_id": "457614808592",
            "tags": {
              "Name": "Public-Subnet-a"
            },
            "vpc_id": "vpc-053e0d138b1c5e6ae"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:457614808592:subnet/subnet-0fd2615076c014b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0fd2615076c014b01",
            "map_public_ip_on_launch": true,
            "owner_id": "457614808592",
            "tags": {
              "Name": "Public-Subnet-b"
            },
            "vpc_id": "vpc-053e0d138b1c5e6ae"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DevOps-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:457614808592:vpc/vpc-053e0d138b1c5e6ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0468c4ee7ed48dd0b",
            "default_route_table_id": "rtb-05c499e34d8f7d643",
            "default_security_group_id": "sg-073ac1e105f189500",
            "dhcp_options_id": "dopt-0674cce28fa719edf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-053e0d138b1c5e6ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05c499e34d8f7d643",
            "owner_id": "457614808592",
            "tags": {
              "Name": "DevOps-VPC"
            }
          }
        }
      ]
    }
  ]
}